// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BICInput is neither optional nor required when specified 1`] = `
<Input
  autoCorrect={false}
  label="SWIFT/BIC"
  placeholder="AB12CDEF"
/>
`;

exports[`BICInput is optional when specified 1`] = `
<Input
  autoCorrect={false}
  label="SWIFT/BIC"
  placeholder="AB12CDEF"
  required={false}
/>
`;

exports[`BICInput renders correctly 1`] = `
<Input
  autoCorrect={false}
  label="SWIFT/BIC"
  placeholder="AB12CDEF"
  required={true}
/>
`;
